@@ -373,17 +373,4 @@ as the value of the symbol, and the hook as the function definition."
 
 ;; Cross define functions from my rc files
 
-(unless (fboundp 'indent-or-complete)
-  (defun indent-or-complete ()
-    "Complete if point is at end of a word, otherwise indent line."
-    (interactive)
-    (if (and (boundp 'snippet)
-             snippet)
-        (snippet-next-field)
-      (if (looking-at "\\>")
-          (progn
-            (hippie-expand nil)
-            (message ""))
-        (indent-for-tab-command)))))
-
 (provide 'rails-lib)
